[gd_scene load_steps=13 format=2]

[ext_resource path="res://Resources/WorldMap.png" type="Texture" id=1]
[ext_resource path="res://World.gd" type="Script" id=2]
[ext_resource path="res://EndTurnButton.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Region.tscn" type="PackedScene" id=4]
[ext_resource path="res://MoneyLabel.gd" type="Script" id=5]
[ext_resource path="res://TurnLabel.gd" type="Script" id=6]
[ext_resource path="res://Resources/Time.png" type="Texture" id=7]
[ext_resource path="res://Resources/Money.png" type="Texture" id=8]
[ext_resource path="res://Font/10CentSoviet32.tres" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Font/10CESRG_.TTF"

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = SubResource( 2 )

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="WorldMap" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="ResourcesPanel" type="PanelContainer" parent="."]
margin_right = 350.0
margin_bottom = 50.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="ResourcesPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 366.0
margin_bottom = 45.0
color = Color( 0.258824, 0.737255, 1, 0.305882 )

[node name="MarginContainer" type="MarginContainer" parent="ResourcesPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 366.0
margin_bottom = 45.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ResourcesPanel/MarginContainer"]
margin_right = 359.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="TurnIcon" type="TextureRect" parent="ResourcesPanel/MarginContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 38.0
texture = ExtResource( 7 )

[node name="TurnLabel" type="Label" parent="ResourcesPanel/MarginContainer/HBoxContainer"]
margin_left = 36.0
margin_right = 157.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Turn: 8"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyIcon" type="TextureRect" parent="ResourcesPanel/MarginContainer/HBoxContainer"]
margin_left = 161.0
margin_right = 193.0
margin_bottom = 38.0
texture = ExtResource( 8 )

[node name="MoneyLabel" type="Label" parent="ResourcesPanel/MarginContainer/HBoxContainer"]
margin_left = 197.0
margin_right = 359.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 3 )
text = "Money: 10"
valign = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Regions" type="Node2D" parent="."]

[node name="RegionA" parent="Regions" instance=ExtResource( 4 )]
position = Vector2( 304.964, 392.417 )
region_name = "Superpotamia"

[node name="RegionB" parent="Regions" instance=ExtResource( 4 )]
position = Vector2( 820.174, 487.826 )
region_name = "Gibbinz"

[node name="EndTurnButton" type="Button" parent="."]
margin_left = 92.4913
margin_top = 814.49
margin_right = 241.491
margin_bottom = 903.49
text = "TAKE ACTION"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
